[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rstreamlabs-rstream"
version = "0.4.0"
description = "Python SDK for rstream tunnels."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "rstream" }]
keywords = ["rstream", "tunnels", "networking", "webhooks"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "protobuf>=7.35.1,<8",
  "PyYAML>=6.0.3,<7",
]

[project.optional-dependencies]
api = ["httpx>=0.28.1,<1"]
asgi = ["h11>=0.16,<1"]
realtime = ["httpx>=0.28.1,<1", "websockets>=16.1.1,<17"]
wsgi = ["h11>=0.16,<1"]
examples = [
  "aiohttp>=3.14.3,<4",
  "django>=5.2.15,<6; python_version < '3.12'",
  "django>=6.0.7,<7; python_version >= '3.12'",
  "fastapi>=0.139.2,<1",
  "flask>=3.1.3,<4",
  "h11>=0.16,<1",
]
dev = [
  "aiohttp>=3.14.3,<4",
  "build>=1.5,<2",
  "django>=5.2.15,<6; python_version < '3.12'",
  "django>=6.0.7,<7; python_version >= '3.12'",
  "fastapi>=0.139.2,<1",
  "flask>=3.1.3,<4",
  "httpx>=0.28.1,<1",
  "mypy>=2.3,<3",
  "pytest>=9.1.1,<10",
  "pytest-asyncio>=1.4,<2",
  "ruff>=0.16,<1",
  "trustme>=1.2,<2",
  "websockets>=16.1.1,<17",
]

[project.urls]
Homepage = "https://rstream.io"
Documentation = "https://rstream.io/docs"
Repository = "https://github.com/rstreamlabs/rstream-python"

[tool.hatch.build.targets.wheel]
packages = ["src/rstream"]

[tool.ruff]
extend-exclude = [
  "src/rstream/_proto/rstream_pb2.py",
  "src/rstream/_proto/rstream_pb2.pyi",
]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]
ignore = ["RUF012"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.mypy]
exclude = [
  "src/rstream/_proto/rstream_pb2.py",
  "src/rstream/_proto/rstream_pb2.pyi",
]
files = ["src/rstream", "tests"]
python_version = "3.10"
show_error_codes = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["google.protobuf.*", "yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["django.test"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
